# projects

./: .gitignore  .gitmodules  README.md
C/OpenCL_GPU_parallelization/: CMakeLists.txt  README.md  parallel.c  parallel.cl
C/dir_listing/: Makefile  dir_listing.c  readme.md
C/signal_ping_pong/: Makefile  ping_pong.c  readme.md
C/tail_watcher/: Makefile  readme.md  tail_watcher.c
Haskell/calendar/: README.md  calendar.hs
Haskell/cipher/: README.md  cipher.hs
Haskell/client_server/: README.md  client_server.hs
Haskell/phonebook/: README.md  phone_book.hs
Java/WeatherApp/: README.md
Java/wordle/: README.md  pom.xml
Java/wordle/src/main/java/: Wordle.java
Java/wordle/src/main/java/fi/tuni/prog3/wordle/: Wordle.java
Kotlin/agrenier-gnss_mimir/: README.md
Python/Alcoholic_spider/: README.md  requirements.txt
Python/LLM_with_RNN/: LLM_rnn_implementation.py  README.md  abcde.txt  abcde_edcba.txt
Python/ML-Pong/: Pong_loading.py  Pong_training.py  README.md  requirements.txt
Python/ML-snake/: README.md  requirements.txt  snek_game_training.py
Python/ML_audio_classifier/: ML_audio_classifier.py  README.md  my_best_model.keras  requirements.txt
Python/ML_audo_classifier/: train_mean_std.pkl
Python/NN_from_scratch/: README.md  ground_up_neural_network.py
Python/brawlhalla_ml/: README.md  requirements.txt
Python/brawlhalla_ml/media/: gif_to_avif.py
Python/lottery_simulator/: README.md
Python/minesweeper/: README.md
Python/minmax_tic-tac-toe/: README.md  minmax_algo.py  runner.py
Rust/pokedex/: Cargo.toml  README.md
Rust/pokedex/src/: main.rs
Rust/rust_raytracer/: README.md
Rust/sorting_algo/: README.md
Rust/sorting_algorithms/: README.md
java/WeatherApp/: README.md
java/WeatherApp/src/main/java/fi/tuni/prog3/weatherapp/: OpenWeatherMapAPI.java  WeatherApp.java
